# clipman-tauri

./: README.md  index.html  package-lock.json  package.json  roadmap.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard.rs  main.rs
src/components/: ErrorBoundary.tsx
src/components/auth/: AuthLayout.tsx  AuthProvider.tsx  LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx  UserMenu.tsx
src/components/clipboard/: ClipboardHistory.tsx  ClipboardViewer.tsx  FilterPanel.tsx  ProgressBar.tsx
src/components/features/history/: historyView.tsx
src/components/layout/: MainLayout.tsx
src/components/settings/: SettingsPanel.tsx
src/components/shortcuts/: ShortcutsPanel.tsx
src/components/ui/dialog/: Dialog.tsx
src/components/ui/tooltip/: Tooltip.tsx
src/routes/: index.tsx
src/routes/auth/: forgot-password.tsx  login.tsx  register.tsx  reset-password.tsx  verify-email.tsx
src/stores/: authStore.ts  clipboardStore.ts  useClipboardStore.tsx
src/types/: auth.ts  clipboard.ts
