[package]
name = "clipman"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clipman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-runtime = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5.0"

arboard = "3.3.0"
tokio = { version = "1.36.0", features = ["full"] }
base64 = "0.21"

# Added dependencies for enhanced clipboard functionality
mime = "0.3"
mime_guess = "2.0"
bytes = "1.5"
infer = "0.15"  # For file type detection

# Compression and advanced MIME detection
flate2 = "1.0"  # For compression
tree_magic_mini = "3.0"  # Enhanced MIME detection
magic = "0.16"  # libmagic bindings for deep MIME detection
rayon = "1.8"  # For parallel processing
indicatif = "0.17"  # Progress bars and indicators
